--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run bash script
-        run: sudo ./Contrib/release.sh
+        run: sudo bash -x ./Contrib/release.sh
         env:
           ENV_VAR: value
 
