--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
         export DESKTOP_PROJECT_DIR="WalletWasabi.Fluent.Desktop"
 
         # Compile the .wxs file to .wixobj
-        candle WalletWasabi.WindowsInstaller/*.wxs -dBasePath=$BASE_PATH -dBuildVersion=$BUILD_VERSION -dDesktopProjectDir=DESKTOP_PROJECT_DIR
+        candle WalletWasabi.WindowsInstaller/*.wxs -dBasePath=$BASE_PATH -dBuildVersion=$BUILD_VERSION -dDesktopProjectDir=$DESKTOP_PROJECT_DIR
 
         WIX_UI_EXTENSION_PATH="$(where candle.exe | head -n 1 | sed 's/candle.exe/WixUIExtension.dll/')"
         WIX_UTIL_EXTENSION_PATH="$(where candle.exe | head -n 1 | sed 's/candle.exe/WixUtilExtension.dll/')"
