--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,8 @@ jobs:
 
     - name: Install WiX Toolset
       run: |
-        choco install wixtoolset --version=3.14.1 --force
+        choco install -y wixtoolset --version=3.14.1 --force
+        choco install -y 7zip.commandline
       shell: powershell
 
     - name: Build .wixproj
