--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,15 +48,25 @@ jobs:
 
     - name: Install WiX Toolset
       run: |
-        choco install -y wixtoolset --version=3.14.1 --force
-        choco install -y 7zip.commandline
-      shell: powershell
+        choco install wixtoolset --version=3.14.1 --force
+        choco install 7zip.commandline
 
-    - name: Build .wixproj
+    - name: Install Windows SDK
+      run: |
+        choco install windows-sdk-10-version-1903-all
+
+    - name: Set up environment
+      run: |
+        mkdir -p certs
+        echo "${{ secrets.SIGNING_CERTIFICATE }}" | base64 -d > certs/Certificate.pfx
+
+    - name: Build Windows Installer
       shell: bash
       run: |
         set -x
         ./Contrib/release.sh wininstaller
+      env:
+        CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
     - name: Upload windows installer
       uses: actions/upload-artifact@v4
@@ -65,6 +75,35 @@ jobs:
         path: ./packages/*  # Adjust the path to your generated files
         compression-level: 0
         if-no-files-found: error
+
+  sign-all-packages:
+    runs-on: ubuntu-latest
+    needs: [debian-package-and-zips, installer-for-windows]
+    steps:
+      - name: Download debian and zips
+        uses: actions/download-artifact@v4
+        with:
+          name: packages-zip-tar
+          path: ./packages
+      - name: Download windows packages
+        uses: actions/download-artifact@v3
+        with:
+          name: packages-for-windows
+          path: ./packages
+      - name: PGP signing
+        shell: bash
+        run: |
+          for FILE in "./packages/*; do
+            gpg --armor --detach-sign $FILE
+            sha256sum $FILE >> SHA256SUMS
+          done
+
+#    - name: Sign the Installer
+#      shell: bash
+#      run: |
+#        INSTALLER_FILE=$(find "./packages" -maxdepth 1 -type f -name "*.msi")
+#        signtool sign /d "Wasabi Wallet" /f ${{ secrets.SIGNING_CERTIFICATE }} /p ${{ secrets.CERT_PASSWORD }} /t http://timestamp.digicert.com /v "$INSTALLER_FILE"
+
 
 #  create-release:
 #    runs-on: ubuntu-latest
