--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,7 @@ jobs:
       - name: PGP signing
         shell: bash
         run: |
+          set -x
           echo "${{ secrets.GPG_PRIVATE_KEY }}" > private.key
           gpg --import private.key
           rm private.key
@@ -103,16 +104,9 @@ jobs:
           export GPG_TTY=$(tty)
 
           for FILE in "./packages/*"; do
-            gpg --armor --detach-sign $FILE
             sha256sum $FILE >> SHA256SUMS
+            gpg --armor --detach-sign $FILE
           done
-
-#    - name: Sign the Installer
-#      shell: bash
-#      run: |
-#        INSTALLER_FILE=$(find "./packages" -maxdepth 1 -type f -name "*.msi")
-#        signtool sign /d "Wasabi Wallet" /f ${{ secrets.SIGNING_CERTIFICATE }} /p ${{ secrets.CERT_PASSWORD }} /t http://timestamp.digicert.com /v "$INSTALLER_FILE"
-
 
 #  create-release:
 #    runs-on: ubuntu-latest
